# shopping-agent

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: UCP_SHOPPING_GUIDE.md
src/shopping_agent/: __init__.py  __main__.py  agent.py  config.py  main.py  mock_server.py  models.py  tools.py  ucp_client.py  web_server.py
src/shopping_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/shopping_agent/web/: app.js  index.html  styles.css
tests/: test_mock_server.py  test_models.py  test_tools.py  test_web_server.py
